# agentcli

./: .env.embedding_test  .env.sec  .gitignore  AGENTS.md  AUTO_REVIEW.md  CHANGELOG.ja.md  CHANGELOG.md  COMMUNICATION.md  Claude_TODO.md  Discord.md  ECHONET_LITE_TODO.md  EMBEDDING_PROVIDER_PLAN.md  ENVIRONMENT.ja.md  ENVIRONMENT.md  FAST_OPTIMIZATION_PLAN.md  FETCH_URL_TODO.md  HANDOVER.txt  HISTORY.ja.md  HISTORY.md  I18N_TODO.md  INTERRUPT.md  IOT_USECASE.ja.md  IOT_USECASE.md  LICENSE  LICENSE-THIRD-PARTY.md  MANIFEST.in  MATTER_TODO.md  MEMORY.md  QUICKSTART.ja.md  QUICKSTART.md  README.ar.md  README.cs.md  README.de.md  README.es.md  README.fi.md  README.fr.md  README.hi.md  README.id.md  README.it.md  README.ja.md  (+75 more)
docs/: ADD_LOCALE.md  COMMUNICATION.md  README.ar.md  README.bn.md  README.cs.md  README.de.md  README.el.md  README.es.md  README.fa.md  README.fi.md  README.fr.md  README.he.md  README.hi.md  README.hu.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.mn.md  README.mr.md  README.nb.md  README.nl.md  README.pl.md  README.pt.md  README.pt_BR.md  README.ro.md  README.ru.md  README.sv.md  README.sw.md  README.th.md  README.tr.md  README.translations.md  README.uk.md  README.vi.md  README.zh_CN.md  README.zh_TW.md  README_AUTO.ja.md  TOOL_I18N_GUIDE.md  auto-pilot-reviewer-enhancement.md  env-loading-spec.md  (+4 more)
samples/: README.md  env.sample.bat  env.sample.env  env.sample.ps1  env.sample.sh  generate_env_samples.py  i18n_samples.py  provider.azure.env.sample  provider.bedrock.env.sample  provider.claude.env.sample  provider.gemini.env.sample  provider.grok.env.sample  provider.nvidia.env.sample  provider.ollama.env.sample  provider.openai.env.sample  provider.openrouter.env.sample
samples/locale/: en.json  ja.json
scripts/: README.md  compile_locales.py  i18n_tools_check.py  modernize_types.py  ollama_vision_models.py  po_qc_summary.py  po_rebuild_en.py  po_rebuild_non_en.py
skills/batch-state-runbook/: SKILL.md
skills/dummy-weather/: SKILL.md
skills/gitlab-vup-build-release-whl/: SKILL.md
skills/prompt-library/: SKILL.md
skills/prompt-library/references/: index.yaml
skills/pypi-upload-dist/: SKILL.md
skills/python-idioms/: SKILL.md
skills/python-idioms/references/: CHECKLIST.md  SOURCES.md  TECHNIQUES.md
skills/sample-skill/: SKILL.md
skills/sample-skill/references/: REFERENCE.md
skills/skills/sample-skill/: SKILL.md
skills/vup-and-release-whl/: SKILL.md
skills/vup-build-release-whl/: SKILL.md
src/uag_envsec/: __init__.py  cli.py  secret_core.py
src/uagent/: QUICKSTART.ja.md  QUICKSTART.md  README.ja.md  README.md  __init__.py  checks.py  cli.py  cli_docs.py  cli_startup.py  core.py  docs_util.py  env_utils.py  env_validate.py  gemini_cache_mgr.py  gui.py  gui_ansi.py  i18n.py  image_session.py  llm_bedrock_responses.py  llm_claude.py  llm_errors.py  llm_flow_helpers.py  llm_gemini.py  llm_helpers.py  llm_image_helpers.py  llm_message_helpers.py  llm_ollama.py  llm_ollama_responses.py  llm_openai_responses.py  llm_openrouter.py  llm_openrouter_responses.py  llm_round_helpers.py  llm_tool_narrowing.py  profile_manager.py  readme_util.py  runtime_banner.py  runtime_env.py  runtime_init.py  runtime_memory.py  runtime_workdir.py  (+14 more)
src/uagent/a2a/: __init__.py  auth.py  client.py  engine.py  errors.py  models.py  server.py  task_store.py
src/uagent/data/: LICENSE-dbip.txt
src/uagent/docs/: ADD_LOCALE.md  AUTO_REVIEW.md  DEVELOP.ja.md  (+18 more)
test/: README.md  conftest.py  requirements.txt  test_add_shared_memory_tool.py  test_analyze_image_tool.py  test_apply_patch_tool.py  test_cmd_exec_json_tool.py  test_cmd_exec_tool.py  test_create_file_tool.py  test_date_calc_tool.py  test_db_query_tool.py  test_delete_file_tool.py  test_excel_ops_tool.py  test_fetch_url_tool.py  test_file_exists_tool.py  test_file_hash_tool.py  test_find_large_files_tool.py  test_get_current_time_tool.py  test_get_env_tool.py  test_get_geoip_tool.py  test_get_os_tool.py  test_get_workdir_tool.py  test_git_ops_tool.py  test_git_ops_tool_integration.py  test_libcst_transform_tool.py  test_lint_format_tool.py  test_list_windows_titles_tool.py  test_long_memory_tools.py  test_mcp_servers_tools.py  test_read_file_tool.py  test_rename_path_tool.py  test_replace_in_file_tool.py  test_search_files_tool.py  test_semantic_search_files_tool.py  test_zip_ops_tool.py
tests/: README.md  conftest.py  matter_fixtures.py  test_additional_safe_tools_smoke.py  test_agent_skills_shared.py  test_cli_exit_regressions.py  test_cli_startup_prompt_toolkit.py  test_delete_file_glob.py  test_document_extract_tool.py  test_finish_skill_tool_smoke.py  test_gpt54_tool_search.py  test_handle_mcp_v2_tool.py  test_high_priority_tools_safe.py  test_libcst_transform_smoke.py  test_list_dir_tool.py  test_llm_claude_thinking.py  test_matter_state_subscribe.py  test_matter_tools.py  test_matter_tools_mock.py  test_mcp_servers_tools_smoke.py  test_memory_and_workdir_tools.py  test_more_safe_tools.py  test_network_tools_mock.py  test_office_tools_smoke.py  test_openrouter_round_helpers.py  test_openrouter_sdk_compat.py  test_read_pptx_pdf_smoke.py  test_replace_in_file_additional_actions.py  test_replace_in_file_crlf_repro.py  test_replace_in_file_strict.py  test_risky_tools_execution.py  test_safe_execution_smoke.py  test_search_files_tool_strengthened.py  test_set_timer_screenshot_spawn_process.py  test_skills_tools.py  test_sub_agent_translator.py  test_tool_coverage.py  test_tool_input_validation_errors.py  test_tool_json_specs_i18n.py  test_tool_sequence_sanitizer.py  (+6 more)
tests/fixtures/: sample.pptx
vscode-extension/: .vscodeignore  LICENSE  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: editorIntegration.ts  extension.ts  panel.ts  treeProvider.ts  wsClient.ts
webinspect/servicenow_approval_auto/: final.html  flow.jsonl  index.jsonl
webinspect/servicenow_approval_check/: flow.jsonl  index.jsonl  latest.html
webinspect/servicenow_approval_check_2/: final.html  flow.jsonl  index.jsonl
webinspect/servicenow_login/: final.html  flow.jsonl  index.jsonl
(+518 files in other folders)
