[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uag"
version = "0.3.51"
description = "A powerful tool execution agent"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "User", email = "ukawa.hirofumi@nttdata-sbc.co.jp" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "mdformat>=1.0.0",
    "openai>=2.30.0",
    "anthropic>=0.86.0",
    "google-genai>=1.69.0",
    "pdfplumber>=0.11.9",
    "python-pptx>=1.0.2",
    "requests>=2.33.1",
    "urllib3>=2.6.3",
    "python-dotenv>=1.2.2",
    "tqdm>=4.67.3",
    "pandas>=3.0.2",
    "openpyxl>=3.1.5",
    "exstruct>=0.7.1",
    "pyyaml>=6.0.3",
    "pyside6>=6.8.0.2",
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "certifi>=2026.2.25",
    "numpy>=2.4.4",
    "pyOpenSSL>=26.0.0",
    "playwright>=1.58.0",
    "holidays>=0.93",
    "pyreadline3>=3.5.4; sys_platform == 'win32'",
    "pywin32>=311; sys_platform == 'win32'",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9; sys_platform == 'win32'",
    "ruff>=0.15.8",
    "black>=26.3.1",
    "mypy>=1.19.1",
    "pylint>=4.0.5",
    "types-requests>=2.33.0.20260327",
    "pytest>=9.0.2",
    "libcst>=1.8.6",
    "mcp>=1.26.0",
    "fastapi>=0.135.2",
    "pydantic>=2.12.5",
    "uvicorn>=0.42.0",
    "jinja2>=3.1.6",
    "janome>=0.5.0",
    "python-multipart>=0.0.22",
    "websockets>=16.0",
    "python-dateutil>=2.9.0.post0",
    "types-PyYAML>=6.0.12.20250915",
    "types-python-dateutil>=2.9.0.20260323",
    "psutil>=7.2.2",
]

[project.scripts]

uag = "uagent.cli:main"
uaga = "uagent.a2a.server:main"
uag_setup = "uagent.setup_cli:main"
uagg = "uagent.gui:main"
uagw = "uagent.web:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["uagent", "uagent.*"]
exclude = ["uagent.mcp*", "test*", "tests*"]

[tool.setuptools.package-data]
uagent = ["tools/**/*", "prompts/**/*", "static/**/*", "templates/**/*", "locales/**/*", "docs/**/*", "README.md", "README.ja.md", "QUICKSTART.md", "QUICKSTART.ja.md"]

[tool.ruff]
# Ruff settings
line-length = 88
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
# Keep this conservative to avoid large semantic changes.
# We explicitly ignore E501 because this repo contains many long Japanese strings
# (SYSTEM_PROMPT, tool specs) that are not worth wrapping.
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
]
ignore = [
  "E501", # line too long
]

# E402 (imports not at top) is intentionally allowed in tool modules because
# they initialize the i18n translator at module import time.

[tool.ruff.lint.per-file-ignores]
"src/uagent/tools/*.py" = ["E402"]
"src/uagent/tools/**/*.py" = ["E402"]

fixable = ["ALL"]
unfixable = []

[tool.mypy]
# Policy: reduce noise first (Project decision: 2b)
python_version = "3.11"
ignore_missing_imports = true
no_implicit_optional = false
check_untyped_defs = false
warn_unused_ignores = false
show_error_codes = true
pretty = true
# CI-friendly: reduce noise first
# - var-annotated: require annotations for local vars
# - misc: various strictness checks (e.g., assigning None to typed class)
disable_error_code = [
  "var-annotated",
  "misc",
  "attr-defined",
  "call-arg",
  "call-overload",
  "assignment",
  "operator",
  "arg-type",
  "union-attr",
  "index",
  "no-redef",
]

# Ensure mypy resolves packages under src/ as the package base.
mypy_path = ["src"]
explicit_package_bases = true
# Limit to library package only.
packages = ["uagent"]
